# duwop

./: .env-sample  .gitignore  Cargo.toml  README.md  devstate-sample.json  release.sh
.github/workflows/: main.yml
extra/: .env-sample  env-sample  install.sh  org.babysnakes.duwop.plist  uninstall.sh
src/: app_defaults.rs  cli_helpers.rs  dns_server.rs  lib.rs  main.rs  setup.rs  ssl.rs  state.rs  supervisor.rs
src/client/: mod.rs
src/dns/: mod.rs  protocol.rs
src/management/: client.rs  mod.rs
src/web/: errors.rs  management.rs  mod.rs  reverse_proxy.rs  static_files.rs
