[package]
name = "duwop"
version = "0.1.0"
authors = ["Haim Ashkenazi <haim@babysnakes.org>"]
edition = "2018"
license = "MIT"

[dependencies]
tokio = "0.1"
tokio-fs = "0.1.6"
tokio-io = "0.1.12"
futures = "0.1.26"
libc = "0.2.55"

hyper = "0.12.28"
hyper-reverse-proxy = "0.4.0"
http = "0.1.17"
mime = "0.3.13"
url = "1.7.2"

failure = "0.1.5"
failure_derive = "0.1.5"
log = "0.4.6"
flexi_logger = "0.13.2"
dotenv = "0.14.0"
structopt = { version = "0.2.16", features = ["wrap_help"] }
dirs = "1.0.5"
text_io = "0.1.7"

[dev-dependencies]
assert_fs = "0.11.3"
