[package]
name = "duwop"
version = "0.3.0-beta1"
authors = ["Haim Ashkenazi <haim@babysnakes.org>"]
edition = "2018"
license = "MIT"

[dependencies]
tokio = "0.1"
tokio-fs = "0.1.6"
tokio-io = "0.1.12"
openssl = { version = "0.10.24", features = ["vendored"] }
openssl-sys = "0.9.48"
foreign-types = "0.3.2" # match the version used by openssl
tokio-openssl = "0.3.0"
futures = "0.1.26"
libc = "0.2.55"

hyper = "0.12.28"
http = "0.1.17"
mime = "0.3.13"

failure = "0.1.5"
failure_derive = "0.1.5"
dns-lookup = "1.0.1"
log = "0.4.6"
flexi_logger = "0.13.2"
textwrap = "0.11.0"
yansi = "0.5.0"
dotenv = "0.14.0"
structopt = { version = "0.2.16", features = ["wrap_help"] }
dirs = "1.0.5"
lazy_static = "1.3.0"
tinytemplate = "1.0.2"
serde = { version = "1.0.98", features = ["derive"] }
trim-margin = "0.1.0"

[dev-dependencies]
assert_fs = "0.11.3"
